--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://khanjawwadjk.github.io/NS-DEMO",
+  "homepage": "https://khanjawwadjk.github.io/NS-DEMO1",
   "name": "demo1",
   "version": "0.1.0",
   "private": true,
